changed how the side menu comes in and out. This fixed the map not loading correctly as it used to load with no width info. Had to add aria-hidden props to the side menu so that if the menu is off screen it wouldn't be focused by a keyboard

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -44,6 +44,8 @@ main {
   z-index: 4;
   position: fixed;
   background-color: rgba(0, 0, 0, 0.623);
+  transition-timing-function: ease-in;
+  transition-duration: 0.5s;
 }
 
 .errorMessage {
